<resources>
    <string name="app_name">Lightweight</string>
    <string name="string_settings">Settings</string>
    <string name="string_plan_training_cycles">Plan Training Cycles</string>
    <string name="string_track_workouts">Track Workouts</string>
    <string name="string_add_exercises">Add Exercises</string>
    <string name="string_new_category">New Category</string>
    <string name="string_add_category">Add Category</string>
    <string name="string_add_exercise">Add Exercise</string>
    <string name="string_category_colon">Category:</string>
    <string name="string_save">Save</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_name">Name</string>
    <string name="string_edit">Edit</string>
    <string name="string_delete">Delete</string>
    <string name="string_options">Options</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_delete_category_desc">Are you sure you want to delete this category and its exercises?</string>
    <string name="string_delete_category">Delete Category</string>
    <string name="string_edit_category">Edit Category</string>
    <string name="string_new_exercise">New Exercise</string>
    <string name="string_edit_exercise">Edit Exercise</string>
    <string name="string_delete_exercise_desc">Are you sure you want to delete this exercise?</string>
    <string name="string_log">Log</string>
    <string name="string_stopwatch">Stopwatch</string>
    <string name="string_history">History</string>
    <string name="string_select_category">Select Category</string>
    <string name="string_select_exercise">Select Exercise</string>
    <string name="string_back_arrow"><![CDATA[<]]></string>
    <string name="string_forward_arrow"><![CDATA[>]]></string>
    <string name="string_select_workout_date">Select Workout Date</string>
    <string name="string_sun">SUN</string>
    <string name="string_mon">MON</string>
    <string name="string_tue">TUE</string>
    <string name="string_wed">WED</string>
    <string name="string_thur">THUR</string>
    <string name="string_fri">FRI</string>
    <string name="string_sat">SAT</string>
    <string name="string_select_date">Select Date</string>
    <string name="string_set">Set</string>
    <string name="string_weight">Weight</string>
    <string name="string_reps">Reps</string>
    <string name="string_clear">Clear</string>
    <string name="string_edit_set">Edit Set</string>
    <string name="string_delete_exercise">Delete Exercise</string>
    <string name="string_note">Note</string>
    <string name="string_add_a_note_here">Add a note here</string>
    <string name="string_trophy">Trophy</string>
    <string name="string_text_bubble">Text bubble</string>
    <string name="string_exercise">Exercise</string>
    <string name="string_reset_stopwatch">Reset stopwatch</string>
    <string name="string_toggle_stopwatch">Toggle stopwatch</string>
    <string name="string_training_cycle">Training Cycle</string>
    <string name="string_description">Description</string>
    <string name="string_new_training_cycle">New Training Cycle</string>
    <string name="string_edit_training_cycle">Edit Training Cycle</string>
    <string name="string_delete_training_cycle">Delete Training Cycle</string>
    <string name="string_delete_training_cycle_desc">Are you sure you want to delete this training cycle?</string>
    <string name="string_add_training_cycle_day">Add training cycle day</string>
    <string name="string_name_eg_leg_day">Name (e.g., Leg Day)</string>
    <string name="string_new_training_day">New Training Day</string>
    <string name="string_edit_training_day">Edit Training Day</string>
    <string name="string_delete_training_day">Delete Training Day</string>
    <string name="string_delete_training_cycle_day_desc">Are you sure you want to delete this training cycle day?</string>
    <string name="string_remove_category">Remove Category</string>
    <string name="string_delete_training_cycle_day_category_desc">Are you sure you want to remove this category and its exercises from the training cycle day?</string>
    <string name="string_remove_exercise">Remove Exercise</string>
    <string name="string_delete_training_cycle_day_exercise_desc">Are you sure you want to remove this exercise from the training cycle day?</string>
    <string name="string_workout">%1$d workout</string>
    <string name="string_total_workout">%1$d total workout</string>
    <string name="string_workouts">%1$d workouts</string>
    <string name="string_total_workouts">%1$d total workouts</string>
    <string name="string_statistics">Statistics</string>
    <string name="string_insights">Insights</string>
    <string name="string_training_set_desc_kg_reps">%1$skg, %2$d reps on %3$s</string>
    <string name="string_training_set_desc_kg_rep">%1$skg, %2$d rep on %3$s</string>
    <string name="string_training_set_desc_lbs_reps">%1$slbs, %2$d reps on %3$s</string>
    <string name="string_training_set_desc_lbs_rep">%1$slbs, %2$d rep on %3$s</string>
    <string name="string_pr_rep_desc">%1$dRM</string>
    <string name="string_pr_weight_desc_kg">%1$skg</string>
    <string name="string_pr_weight_desc_lbs">%1$slbs</string>
    <string name="string_theme">Theme</string>
    <string name="string_unit_of_measurement">Unit of measurement</string>
    <string name="string_weight_increment">Weight increment</string>
    <string name="string_highlight_personal_records">Highlight personal records</string>
    <string name="string_keep_screen_on">Keep screen on</string>
    <string name="string_total_instances">Total instances</string>
    <string name="string_total_sets">Total sets</string>
    <string name="string_total_reps">Total reps</string>
    <string name="string_max_weight">Max weight</string>
    <string name="string_max_reps">Max reps</string>
    <string name="string_personal_records">Personal records</string>
    <string name="string_kg">kg</string>
    <string name="string_lbs">lbs</string>
    <string name="string_unit_of_measurement_title">Unit of Measurement</string>
    <string name="string_system_default">System default</string>
    <string name="string_light">Light</string>
    <string name="string_dark">Dark</string>
    <string name="string_weight_kg">%1skg</string>
    <string name="string_weight_lbs">%1slbs</string>
    <string name="string_number_rep">%1d rep</string>
    <string name="string_number_reps">%1d reps</string>
    <string name="string_select_date_low">Select date</string>
    <string name="string_share_workout">Share Workout</string>
    <string name="string_share_training_cycle">Share Training Cycle</string>
    <string name="string_share">Share</string>
    <string name="string_categories_for_cycle_content_desc">Categories for training cycle</string>
    <string name="string_exercises_for_cycle_content_desc">Exercises for training cycle</string>
</resources>