<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Appearance">

        <ListPreference
            app:defaultValue="@string/string_light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/string_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="General">]

        <ListPreference
            app:defaultValue="@string/string_kg"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:title="@string/string_unit_of_measurement"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2.5"
            app:entries="@array/weight_increment_entries"
            app:entryValues="@array/weight_increment_values"
            app:key="weightIncrement"
            app:title="@string/string_weight_increment"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="keepScreenOn"
            app:title="@string/string_keep_screen_on" />

    </PreferenceCategory>

</PreferenceScreen>