<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_set_tracker"
    app:startDestination="@id/logSetsFragment">
    <fragment
        android:id="@+id/logSetsFragment"
        android:name="com.example.lightweight.ui.settracker.logsets.LogSetsFragment"
        android:label="@string/string_log"
        tools:layout="@layout/fragment_log_sets" />
    <fragment
        android:id="@+id/stopwatchFragment"
        android:name="com.example.lightweight.ui.settracker.stopwatch.StopwatchFragment"
        android:label="@string/string_stopwatch"
        tools:layout="@layout/fragment_stopwatch" />
    <fragment
        android:id="@+id/exerciseHistoryFragment"
        android:name="com.example.lightweight.ui.settracker.exercisehistory.ExerciseHistoryFragment"
        android:label="@string/string_history"
        tools:layout="@layout/fragment_exercise_history" />
</navigation>