<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_training_set_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_set"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_training_set_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_weight"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_training_set_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_reps"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>