<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_edit_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_edit_exercise"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_edit_exercise_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_category_colon"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/edit_text_edit_exercise_name"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_exercise" />

    <TextView
        android:id="@+id/text_view_edit_exercise_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Legs"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/text_view_edit_exercise_category"
        app:layout_constraintTop_toTopOf="@id/text_view_edit_exercise_category" />

    <EditText
        android:id="@+id/edit_text_edit_exercise_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="exerciseName"
        android:ems="10"
        android:hint="@string/string_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_exercise_category" />

    <Button
        android:id="@+id/button_save_edit_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_save"
        android:textColor="?colorOnSecondary"
        app:backgroundTint="?colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_exercise_name" />

    <Button
        android:id="@+id/button_cancel_edit_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_exercise_name" />

</androidx.constraintlayout.widget.ConstraintLayout>