<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_edit_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_edit_set"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_edit_set_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_edit_set_weight"
        android:text="@string/string_weight"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_edit_set_weight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_edit_set_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_edit_set_reps"
        android:text="@string/string_reps"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_edit_set_reps"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_edit_set_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="weight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_edit_set_weight"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_set" />

    <EditText
        android:id="@+id/edit_text_edit_set_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="reps"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_edit_set_weight"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_set_weight" />

    <Button
        android:id="@+id/button_save_edit_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_set_reps" />

    <Button
        android:id="@+id/button_cancel_edit_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_set_reps" />

</androidx.constraintlayout.widget.ConstraintLayout>